<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>Sarah_Florian_Mathieu</groupId>
  <artifactId>Converter_json-csv</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>Converter_json-csv</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <main-class>Sarah_Florian_Mathieu.Converter_json_csv.App</main-class>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>20190722</version>
	</dependency>
	<dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-csv</artifactId>
      <version>1.7</version>
    </dependency>
    <dependency>
      <groupId>com.github.spotbugs</groupId>
      <artifactId>spotbugs</artifactId>
      <version>4.0.0-beta4</version>
    </dependency>
  </dependencies>
  
  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.0.1</version>
        <configuration>
        </configuration>
      </plugin>
      
      <plugin>
	    <groupId>org.apache.maven.plugins</groupId>
	    <artifactId>maven-checkstyle-plugin</artifactId>
	    <version>3.0.0</version>
	    <reportSets>
		  <reportSet>
		    <reports>
			  <report>checkstyle</report>
		    </reports>
		  </reportSet>
	    </reportSets>
	  </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>findbugs-maven-plugin</artifactId>
        <version>3.0.6-SNAPSHOT</version>
      </plugin>
      <plugin>
          <groupId>com.github.spotbugs</groupId>
          <artifactId>spotbugs-maven-plugin</artifactId>
          <version>3.1.12.2</version>
      </plugin>
    </plugins>
  </reporting>
  
  <build>
    <plugins>
	  <plugin>
	    <artifactId>maven-assembly-plugin</artifactId>
		  <version>3.1.0</version>
		  <configuration>
		    <descriptorRefs>
			  <descriptorRef>jar-with-dependencies</descriptorRef>
		    </descriptorRefs>
		    <archive>
			  <manifest>
			    <mainClass>${main-class}</mainClass>
			  </manifest>
		    </archive>
		  </configuration>
		  <executions>
		    <execution>
			  <id>make-assembly</id>
			  <phase>package</phase>
			  <goals>
			    <goal>single</goal>
			  </goals>
		    </execution>
		  </executions>
	    </plugin>
	    <plugin>
		  <groupId>org.apache.maven.plugins</groupId>
		  <artifactId>maven-jar-plugin</artifactId>
		  <version>3.0.2</version>
		  <configuration>
			<archive>
			  <manifest>
				<mainClass>${main-class}</mainClass>
			  </manifest>
			</archive>
		  </configuration>
        </plugin>
	  </plugins>
    </build>
</project>
